# Codify

Code.xcodeproj/: project.pbxproj
CodeApp/ANE/: ane_bridge.h  ane_bridge.m  ane_mil_gen.h  ane_model_compiler.h  ane_model_compiler.m
CodeApp/Constants/: Resources.swift
CodeApp/Managers/: Executor.swift
CodeApp/Managers/EditorImplementation/: MonacoImplementation.swift
CodeApp/Services/: ANEInferenceEngine.swift  ANELLMService.swift  ANEModelCompiler.swift  AgentService.swift  GGUFDequantizer.swift  GGUFLoader.swift  GGUFTokenizer.swift  WasminspectMIAdapter.swift
CodeApp/Utilities/: Code-Bridging-Header.h  node.swift  python.swift
CodeApp/Views/: ChatView.swift  EditorContextMenu.swift  VibeCodingView.swift
fastlane/: Matchfile
wasmer-ios/: Cargo.toml  README.md
wasmer-ios/WasmerRuntime.xcframework/: Info.plist
wasmer-ios/WasmerRuntime.xcframework/ios-arm64_x86_64-simulator/Headers/: wasmer_ios.h
wasmer-ios/src/: lib.rs
