[package]
name = "wasmer-ios"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
wasmer = { path = "../../wasmer/lib/api", default-features = false, features = ["mvvm", "cranelift"] }
wasmer-wasix = "0.601.0"
tokio = { version = "1", features = ["rt", "sync"] }
libc = "0.2"
nix = { version = "0.27", features = ["fs"] }

[patch.crates-io]
wasmer = { path = "../../wasmer/lib/api", features = ["mvvm", "cranelift"] }
wasmer-types = { path = "../../wasmer/lib/types" }
wasmer-vm = { path = "../../wasmer/lib/vm" }
wasmer-compiler = { path = "../../wasmer/lib/compiler" }
wasmer-derive = { path = "../../wasmer/lib/derive" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
